# debt-management-backend

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  DEPLOYMENT_BEST_PRACTICES.md  Dockerfile  LAMBDA_PERFORMANCE_OPTIMIZATION.md  Makefile  README.md  authorizer.py  main.py  pyproject.toml
backups/: .gitkeep
handlers/: __init__.py  auth.py  debts.py  users.py
infrastructure/: Pulumi.yaml  __main__.py  deploy_ecr_only.py  get_image_tag.py  requirements.txt
infrastructure/components/: __init__.py  lambda_function.py
models/: __init__.py  debt.py  dynamodb.py  users.py
scripts/: upload_env_to_parameter_store.py
services/: __init__.py  dynamodb.py  google_oauth.py  parameter_store.py  secrets.py  supabase_auth.py
utils/: __init__.py  decorators.py  logging.py  responses.py  security.py
